--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ oauth2client
 google-api-python-client
 google-auth-oauthlib
 google-auth-httplib2
+
+Flask==2.2.2
+
+gunicorn==20.1.0
+
+aiohttp==3.8.1
